--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,47 @@
-/* body */
-@import url(../blocks/body/body.css);
+/* fonts */
+@import url(../fonts/inter.css);
+
+/* page */
+@import url(../blocks/page/page.css);
 
 /* header */
 @import url(../blocks/header/header.css);
 
 /* languages */
 @import url(../blocks/languages/languages.css);
+@import url(../blocks/languages/__link/languages__link.css);
+@import url(../blocks/languages/__link/_active/languages__link_active.css);
+
+/* lead */
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
+/* intro */
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/__item/list__item.css);
+@import url(../blocks/intro/__list/__item/__value/item__value.css);
+
+/* photo */
+@import url(../blocks/photo/photo.css);
+
+/* places */
+@import url(../blocks/places/places.css);
+
+/* place */
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__column-one/place__column-one.css);
+@import url(../blocks/place/__column-two/place__column-two.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+
+/* website */
+@import url(../blocks/website/website.css);
+@import url(../blocks/website/__url-heading/website__url-heading.css);
+@import url(../blocks/website/__link/website__link.css);
