--- a/pages/index.css
+++ b/pages/index.css
@@ -35,8 +35,6 @@
 
 /* place */
 @import url(../blocks/place/place.css);
-@import url(../blocks/place/__column-one/place__column-one.css);
-@import url(../blocks/place/__column-two/place__column-two.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
@@ -45,3 +43,15 @@
 @import url(../blocks/website/website.css);
 @import url(../blocks/website/__url-heading/website__url-heading.css);
 @import url(../blocks/website/__link/website__link.css);
+
+/* cover */
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+
+/* footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__links/__item/links__item.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
