--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,4 +2,9 @@
   font-size: 18px;
   line-height: 163%;
   margin: 0;
+  padding-bottom: 26px;
+}
+
+.place__paragraph:last-of-type {
+  padding-bottom: 0;
 }
