--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,7 @@
 .place {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: min-content minmax(min-content, 460px);
   padding-bottom: 80px;
 }
 
