--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,9 +1,13 @@
 .cover__overlay {
   position: absolute;
-  width: 1184px;
-  height: 740px;
+  width: 100%;
+  height: 100%;
   display: flex;
   background-color: #2A2C2F;
   opacity: .3;
   z-index: 2;
+}
+
+.cover__overlay:hover {
+  opacity: .8;
 }
