--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,4 +1,5 @@
 .cover__subtitle {
+  position: relative;
   font-size: 18px;
   line-height: 22px;
   max-width: 360px;
@@ -6,4 +7,11 @@
   margin: 0;
   display: flex;
   z-index: 3;
+}
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
