--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,4 +1,5 @@
 .cover__title {
+  position: relative;
   font-size: 72px;
   line-height: 76px;
   max-width: 560px;
@@ -7,4 +8,11 @@
   padding-bottom: 32px;
   display: flex;
   z-index: 3;
+}
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
