--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,15 +1,12 @@
 .cover {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  width: 1184px;
-  height: 740px;
-  background-image: url(../../images/__background.jpg);
   color: white;
-  z-index: 1;
   padding-bottom: 92px;
-  background-repeat: no-repeat;
+  z-index: 3;
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    padding-bottom: 64px;
+  }
 }
