--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,27 @@
   margin: auto;
   padding-top: 28px;
 }
+
+@media screen and (max-width: 1279px) {
+  .header {
+    max-width: 928px;
+    padding: 28px 48px 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header {
+    box-sizing: border-box;
+    min-width: 720px;
+    padding: 28px 24px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    min-width: 288px;
+    height: 42px;
+    padding: 16px 16px 0;
+  }
+}
+
