--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,3 +2,9 @@
   margin: 0;
   padding: 0 0 92px 0;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__list {
+    padding: 0 0 64px 0;
+  }
+}
