--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,3 +5,11 @@
   padding-top: 92px;
   padding-bottom: 40px;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    padding-top: 64px;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
