--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,3 +6,11 @@
   margin: 0;
   padding-bottom: 32px;
 }
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    padding: 0 24px 32px;
+  }
+}
