--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,3 +7,17 @@
   align-items: center;
   padding-top: 56px;
 }
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    width: 928px;
+    padding: 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    width: 100%;
+    padding: 48px 0 0;
+  }
+}
