--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,24 @@
 .place__image {
   max-width: 460px;
 }
+
+@media screen and (max-width: 1279px) {
+  .place__image {
+    padding-right: 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place__image {
+    width: calc(100vw * .443);
+    padding-right: 28px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__image {
+    max-width: 100%;
+    width: 100%;
+    padding-right: 0;
+  }
+}
