--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,3 +8,11 @@
 .place__paragraph:last-of-type {
   padding-bottom: 0;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 163%;
+    padding: 0 16px 25px;
+  }
+}
