--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,3 +5,17 @@
   max-width: 460px;
   padding-bottom: 48px;
 }
+
+@media screen and (max-width: 1023px) {
+  .place__title {
+    font-size: calc(100vw * .0546875);
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__title {
+    padding-bottom: 0;
+    padding-left: 16px;
+  }
+}
