--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -6,3 +6,25 @@
   color: white;
   padding-top: 92px;
 }
+
+@media screen and (max-width: 1279px) {
+  .places {
+    padding: 92px 48px 0;
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places {
+    padding: 92px 24px 0;
+    min-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+    padding: 64px 0 66px;
+    width: 100%;
+    min-width: 320px;
+  }
+}
