--- a/blocks/website/website.css
+++ b/blocks/website/website.css
@@ -2,3 +2,10 @@
   padding-bottom: 48px;
   align-self: end;
 }
+
+@media screen and (max-width: 767px) {
+  .website {
+    padding-bottom: 0;
+    padding-left: 16px;
+  }
+}
