--- a/blocks/footer/__link/__item/link__item.css
+++ b/blocks/footer/__link/__item/link__item.css
@@ -1,5 +1,14 @@
-.link__item {
-  list-style: none;
+.footer__link {
+  text-decoration: none;
   color: white;
-  padding-right: 18px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    padding-bottom: 32px;
+  }
+
+  .footer__link:last-of-type {
+    padding-bottom: 48px;
+  }
 }
