--- a/blocks/list/list.css
+++ b/blocks/list/list.css
@@ -1,10 +1,10 @@
-.intro__list {
+.list {
   margin: 0;
   padding: 0 0 92px 0;
 }
 
 @media screen and (max-width: 767px) {
-  .intro__list {
+  .list {
     padding: 0 0 64px 0;
   }
 }
