--- a/pages/index.css
+++ b/pages/index.css
@@ -23,9 +23,11 @@
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
-@import url(../blocks/intro/__list/intro__list.css);
-@import url(../blocks/intro/__list/__item/list__item.css);
-@import url(../blocks/intro/__list/__item/__value/item__value.css);
+
+/* list */
+@import url(../blocks/list/list.css);
+@import url(../blocks/list/__item/list__item.css);
+@import url(../blocks/list/__value/list__value.css);
 
 /* photo */
 @import url(../blocks/photo/photo-grid.css);
