--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -1,14 +1,14 @@
-.link__item {
+.footer__item {
   list-style: none;
   padding-right: 18px;
 }
 
 @media screen and (max-width: 767px) {
-  .link__item {
+  .footer__item {
     padding-bottom: 32px;
   }
 
-  .link__item:last-of-type {
+  .footer__item:last-of-type {
     padding-bottom: 48px;
   }
 }
