--- a/blocks/footer/__items/footer__items.css
+++ b/blocks/footer/__items/footer__items.css
@@ -1,11 +1,11 @@
-.footer__links {
+.footer__items {
   display: flex;
   padding: 0;
   margin: 0;
 }
 
 @media screen and (max-width: 767px) {
-  .footer__links {
+  .footer__items {
     flex-direction: column;
   }
 }
