--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -3,6 +3,11 @@
   padding-right: 18px;
 }
 
+.footer__item a {
+  text-decoration: none;
+  color: white;
+}
+
 @media screen and (max-width: 767px) {
   .footer__item {
     padding-bottom: 32px;
