--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -7,14 +7,32 @@
   align-items: center;
   margin: auto;
   max-width: 1184px;
-  height: 740px;
+  min-height: 740px;
   background-image: url(../../../images/__background.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
+  text-decoration: none;
+  color: white;
+}
+
+.cover__background::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: #2A2C2F;
+  opacity: .3;
+  z-index: 2;
+}
+
+.cover__background:hover::before {
+  opacity: .8;
 }
 
 @media screen and (max-width: 1184px) {
   .cover__background  {
-    height: calc(100vw * .625);
+    min-height: calc(100vw * .625);
   }
 }
