--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   max-width: 1184px;
   width: 100%;
   margin: auto;
@@ -25,7 +26,6 @@
 @media screen and (max-width: 767px) {
   .header {
     min-width: 288px;
-    height: 42px;
     padding: 16px 16px 0;
   }
 }
