--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding-top: 8px;
   text-transform: uppercase;
+  letter-spacing: 1.5px;
 }
 
 @media screen and (max-width: 1123px) {
