--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,7 +12,13 @@
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
-    line-height: 163%;
+    padding: 0 16px 25px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place__paragraph {
+    font-size: 16px;
     padding: 0 16px 25px;
   }
 }
