--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,17 +1,33 @@
 .place {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 460px 1fr;
   grid-template-rows: min-content minmax(min-content, 460px);
   padding-bottom: 80px;
+  grid-column-gap: 40px;
 }
 
 .place:last-of-type {
-  padding-bottom: 92px;
+  padding-bottom: 0;
+}
+
+@media screen and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 1fr;
+    grid-column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 340px 1fr;
+    grid-column-gap: 28px;
+    padding-bottom: 73px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .place {
-    grid-template-columns: repeat(1, 100%);
+    grid-template-columns: 1fr;
     grid-template-rows: repeat(4, min-content);
     grid-row-gap: 32px;
     padding-bottom: 50px;
