--- a/pages/index.css
+++ b/pages/index.css
@@ -1,16 +1,18 @@
+/* normalize */
+@import url(../vendor/normalize.css);
+
 /* fonts */
-@import url(../fonts/inter.css);
+@import url(../fonts/fonts.css);
 
 /* page */
 @import url(../blocks/page/page.css);
 
 /* header */
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__languages/header__languages.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__link/_active/header__link_active.css);
 
-/* languages */
-@import url(../blocks/languages/languages.css);
-@import url(../blocks/languages/__link/languages__link.css);
-@import url(../blocks/languages/__link/_active/languages__link_active.css);
 
 /* lead */
 @import url(../blocks/lead/lead.css);
@@ -23,11 +25,9 @@
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
-
-/* list */
-@import url(../blocks/list/list.css);
-@import url(../blocks/list/__item/list__item.css);
-@import url(../blocks/list/__value/list__value.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__item/intro__item.css);
+@import url(../blocks/intro/__value/intro__value.css);
 
 /* photo */
 @import url(../blocks/photo/photo.css);
@@ -41,16 +41,13 @@
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
-
-/* website */
-@import url(../blocks/website/website.css);
-@import url(../blocks/website/__url-heading/website__url-heading.css);
-@import url(../blocks/website/__link/website__link.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__link/place__link.css);
 
 /* cover */
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__background/cover__background.css);
-@import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
@@ -58,5 +55,5 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__items/footer__items.css);
 @import url(../blocks/footer/__item/footer__item.css);
-@import url(../blocks/footer/__item/_link/footer__item_link.css);
+@import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
