--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,17 +1,17 @@
 @media screen and (max-width: 1279px) {
-  .photo__item {
+  .photo-grid__item {
     width: 300px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .photo__item {
+  .photo-grid__item {
     width: 352px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .photo__item {
+  .photo-grid__item {
     width: 100%;
   }
 }
