--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,4 +1,4 @@
-.photo {
+.photo-grid {
   display: grid;
   max-width: 1184px;
   margin: auto;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 1279px) {
-  .photo {
+  .photo-grid {
     max-width: 928px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -18,7 +18,7 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .photo {
+  .photo-grid {
     max-width: 720px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
@@ -28,7 +28,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .photo {
+  .photo-grid {
     max-width: 100%;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
