--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,6 +2,7 @@
   position: relative;
   font-size: 72px;
   line-height: 76px;
+  font-weight: 900;
   max-width: 560px;
   text-align: center;
   margin: 0;
