--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,19 +6,18 @@
   width: 100%;
   margin: auto;
   padding-top: 28px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
   .header {
-    max-width: 928px;
     padding: 28px 48px 0;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .header {
-    box-sizing: border-box;
-    min-width: 720px;
+    max-width: none;
     padding: 28px 24px 0;
   }
 }
