--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,6 +2,7 @@
   position: relative;
   font-size: 18px;
   line-height: 22px;
+  font-weight: 400;
   max-width: 360px;
   text-align: center;
   margin: 0;
