--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,6 +5,13 @@
   z-index: 3;
 }
 
+@media screen and (max-width: 1023px) {
+  .cover {
+    padding-bottom: 88px;
+  }
+}
+
+
 @media screen and (max-width: 767px) {
   .cover {
     padding-bottom: 64px;
