--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,12 +2,17 @@
   padding-right: 18px;
   font-size: 24px;
   line-height: 28px;
+  font-weight: 400;
   text-decoration: none;
   color: white;
 }
 
 .header__link:last-of-type {
   padding-right: 0;
+}
+
+.header__link:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width: 767px) {
