--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,13 @@
 .intro__list {
   margin: 0;
   padding: 0 0 92px 0;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__list {
+    padding: 0 0 88px 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
