--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,8 +2,15 @@
   margin: 0;
   font-size: 54px;
   line-height: 58px;
+  font-weight: 900;
   padding-top: 92px;
   padding-bottom: 40px;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__title {
+    padding-bottom: 34px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -11,5 +18,6 @@
     padding-top: 64px;
     font-size: 32px;
     line-height: 35px;
+    padding-bottom: 38px;
   }
 }
