--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,13 +2,20 @@
   align-self: flex-start;
   font-size: 10px;
   line-height: 14px;
+  font-weight: 400;
   margin: 0;
   padding-top: 8px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
 
-@media screen and (max-width: 1123px) {
+@media screen and (max-width: 1279px) {
+  .lead__caption {
+    padding-left: 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
   .lead__caption {
     padding-left: 24px;
   }
