--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,12 +5,19 @@
   max-width: 640px;
   text-align: center;
   padding-bottom: 64px;
+  font-weight: 400;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__subtitle {
+    padding-bottom: 56px;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
-    padding: 0 24px 56px;
+    padding: 0 24px 40px;
   }
 }
