--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,7 @@
 .lead__title {
   font-size: 96px;
   line-height: 100px;
+  font-weight: 900;
   max-width: 720px;
   text-align: center;
   margin: 0;
@@ -11,6 +12,6 @@
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    padding: 0 24px 32px;
+    padding-bottom: 16px;
   }
 }
