--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 1279px) {
   .lead {
     max-width: 928px;
-    padding: 0 48px;
+    padding: 48px 48px 0;
   }
 }
 
