--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,7 @@
 .place__paragraph {
   font-size: 18px;
   line-height: 163%;
+  font-weight: 400;
   margin: 0;
   padding-bottom: 26px;
 }
@@ -12,7 +13,7 @@
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
-    padding: 0 16px 25px 0;
+    padding-bottom: 25px;
   }
 }
 
@@ -20,5 +21,6 @@
   .place__paragraph {
     font-size: 16px;
     padding: 0 16px 25px;
+    max-width: 288px;
   }
 }
