--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,19 +2,22 @@
   margin: 0;
   font-size: 72px;
   line-height: 76px;
+  font-weight: 900;
   max-width: 460px;
   padding-bottom: 48px;
 }
 
 @media screen and (max-width: 1023px) {
   .place__title {
-    font-size: calc(100vw * .0546875);
+    max-width: 330px;
+    font-size: 42px;
     line-height: 46px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place__title {
+    font-size: 32px;
     padding-bottom: 0;
     padding-left: 16px;
   }
