--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -14,14 +14,16 @@
   .place {
     grid-template-columns: 440px 1fr;
     grid-column-gap: 32px;
+    padding-bottom: 60px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .place {
     grid-template-columns: 340px 1fr;
+    grid-template-rows: min-content min-content;
     grid-column-gap: 28px;
-    padding-bottom: 73px;
+    padding-bottom: 71px;
   }
 }
 
@@ -29,8 +31,8 @@
   .place {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, min-content);
-    grid-row-gap: 32px;
-    padding-bottom: 50px;
+    grid-row-gap: 30px;
+    padding-bottom: 44px;
   }
 
   .place:last-of-type {
