--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,12 +4,13 @@
   max-width: 984px;
   margin: auto;
   color: white;
-  padding: 92px 0 123px;
+  padding: 92px 0;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
   .places {
-    padding: 92px 48px 92px;
+    padding: 92px 0 73px;
     max-width: 928px;
   }
 }
@@ -23,8 +24,9 @@
 
 @media screen and (max-width: 767px) {
   .places {
-    padding: 64px 0 66px;
+    padding: 58px 0 66px;
     width: 100%;
-    min-width: 320px;
+    min-width: 300px;
+
   }
 }
