--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -19,6 +19,8 @@
 .cover__background::before {
   position: absolute;
   content: '';
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
