--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -18,6 +18,7 @@
 @media screen and (max-width: 767px) {
   .place__title {
     font-size: 32px;
+    line-height: 35px;
     padding-bottom: 0;
     padding-left: 16px;
   }
