--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
   display: grid;
   grid-template-columns: 460px 1fr;
-  grid-template-rows: min-content minmax(min-content, 460px);
+  grid-template-rows: min-content max-content;
   padding-bottom: 80px;
   grid-column-gap: 40px;
 }
@@ -14,7 +14,6 @@
   .place {
     grid-template-columns: 440px 1fr;
     grid-column-gap: 32px;
-    padding-bottom: 60px;
   }
 }
 
@@ -31,8 +30,8 @@
   .place {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, min-content);
-    grid-row-gap: 30px;
-    padding-bottom: 44px;
+    grid-row-gap: 32px;
+    padding-bottom: 50px;
   }
 
   .place:last-of-type {
